--- a/W2/config/config.yaml
+++ b/W2/config/config.yaml
@@ -6,7 +6,7 @@ preprocessing:
   - threat
   - insult
   - identity_hate
-  input_convertor: count_vectorization
+  input_convertor: skip
   input_id_column: id
   input_testset: ./data/test.csv
   input_text_column: comment_text
@@ -19,7 +19,7 @@ training:
   epochs: 10
   gradient_cliping: true
   learning_rate: 1.0
-  model_name: naivebayse
+  model_name: cnn
   optimizer: sgd
 predict:
   output_path: ./data/submission.csv
