--- a/W3/config/cnn_config_mini.yaml
+++ b/W3/config/cnn_config_mini.yaml
@@ -19,11 +19,10 @@ preprocessing:
   - identity_hate
   input_convertor: nn_vectorization
   input_id_column: id
-  input_testset: ./data/test.csv
+  input_testset: ./data/mini_test.csv
   input_text_column: comment_text
-  input_trainset: ./data/train.csv
+  input_trainset: ./data/mini_train.csv
   input_embedding: ./data/glove.6B.zip
-  embedding_dim: 100
   random_seed: 0
   split_ratio: 0.3
   maxlen: 128
