--- a/W4/config/cnn_config_mini.yaml
+++ b/W4/config/cnn_config_mini.yaml
@@ -9,9 +9,9 @@ preprocessing:
   embedding_dim: 100
   input_convertor: nn_vectorization
   input_id_column: id
-  input_testset: ./data/test.csv
+  input_testset: ./data/mini_test.csv
   input_text_column: comment_text
-  input_trainset: ./data/train.csv
+  input_trainset: ./data/mini_train.csv
   maxlen: 128
   pretrained_embedding: ./data/glove.6B.100d.txt
   random_seed: 0
