--- a/W4/config/transformer_config_mini.yaml
+++ b/W4/config/transformer_config_mini.yaml
@@ -9,9 +9,9 @@ preprocessing:
   embedding_dim: 100
   input_convertor: nn_vectorization
   input_id_column: id
-  input_testset: ./data/test.csv
+  input_testset: ./data/mini_test.csv
   input_text_column: comment_text
-  input_trainset: ./data/train.csv
+  input_trainset: ./data/mini_train.csv
   maxlen: 128
   pretrained_embedding: ./data/glove.6B.100d.txt
   random_seed: 0
@@ -23,9 +23,11 @@ training:
   batch_size: 32
   dropout_rate: 0.5
   embedding_dim: 100
+  num_heads: 2
+  ff_dim: 32
   epochs: 1
   gradient_cliping: true
   learning_rate: 0.8
   maxlen: 128
-  model_name: textcnn
+  model_name: transformer
   optimizer: sgd
